methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:45: error: value reen is not a member of object java.awt.Color
    setCouleurBrosse(Color.reen)
                           ^